k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: patient-service-network-policy
  namespace: medconnect-dev
spec:
  podSelector:
    matchLabels:
      app: patient-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: appointment-service
        - namespaceSelector:
            matchLabels:
              purpose: testing
      ports:
        - protocol: TCP
          port: 3000
